# flux-protocol

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  test.sh
neardev/: default_alice  default_carol  default_fungibletoken
neardev/default/: 0123456789.json  flux-dev.json  flux-protocol-alpha.json  flux-protocol-dev.json  flux-protocol-staging.json  flux_protocol_alpha.json  fluxx.json  fluxy.json  fluxyy.json  klopt.json  local-dev.json  my_simple_payload_test_account.json
res/: flux_protocol.wasm  fungible_token.wasm
scripts/: build.sh  build_and_deploy.sh  create_account.sh  delete.sh  deploy.sh  deploy_local.sh  get_fdai_balance.sh  test.sh
src/: lib.rs  markets.rs  utils.rs
src/markets/: binary_market.rs  market.rs
src/markets/binary_market/: orderbook.rs
src/markets/binary_market/orderbook/: order.rs
src/markets/market/: orderbook.rs
src/markets/market/orderbook/: order.rs
src/markets/tests/: binary_order_matching_tests.rs  bst_tests.rs  categorical_market_tests.rs  claim_earnings_tests.rs  fdai_tests.rs  fee_payout_tests.rs  init_tests.rs  legacy_orderbook_tests.rs  market_depth_tests.rs  market_dispute_tests.rs  market_order_tests.rs  market_resolution_tests.rs  order_matching_tests.rs  test_market_resolution.rs  utils.rs
src/markets/tests/neardev/default/: klopt.json
